attached_assets/Pasted--rest-express-1-0-0-dev-cross-env-NODE-ENV-development-tsx-server-index-ts-dotenv-17-2-3--1764399798809_1764399798810.txt

> rest-express@1.0.0 dev
> cross-env NODE_ENV=development tsx server/index.ts

[dotenv@17.2.3] injecting env (0) from .env -- tip: 🔐 prevent building .env in docker: https://dotenvx.com/prebuild
📧 SMTP email service configured
✅ Zoom service configured
🛡️  Rate limiting middleware initialized
   Login: 5 requests per 15 minutes
   Signup: 3 requests per 60 minutes
   Upload: 50 requests per 60 minutes
   General API: 1000 requests per 15 minutes
(node:16863) [MONGOOSE] Warning: Duplicate schema index on {"email":1} found. This is often due to declaring an index using both "index: true" and "schema.index()". Please remove the duplicate index definition.
(Use `node --trace-warnings ...` to show where the warning was created)
[dotenv@17.2.3] injecting env (0) from .env -- tip: ✅ audit secrets and track compliance: https://dotenvx.com/ops
Connected to MongoDB
7:01:03 AM [express] ✅ Database connected successfully
🔄 Starting LiveSession schema migration...
✅ LiveSession migration complete. Updated 0 of 1 sessions.
7:01:08 AM [express] 📦 Found 15 existing packages
7:01:09 AM [express] 🔐 Verified admin user (email: admin@fitpro.com, role: admin)
7:01:10 AM [express] 🔐 Verified trainer user (email: trainer@fitpro.com)
🔧 Checking for string clientIds to fix...
✅ All clientIds are properly formatted (no string IDs found)
WebSocket server initialized
7:01:13 AM [express] 🔌 WebSocket server initialized
📧 Session reminder scheduler started (checking every 30 minutes)
7:01:13 AM [express] 🚀 Server running on http://0.0.0.0:5000
📧 Checking session reminders: found 0 sessions in reminder window
[replit-cartographer] Error processing /home/runner/workspace/client/src/pages/client-achievements.tsx: SyntaxError: Unexpected token, expected "," (210:0)
    at toParseError (/home/runner/workspace/node_modules/@babel/parser/src/parse-error.ts:95:45)
    at raise (/home/runner/workspace/node_modules/@babel/parser/src/tokenizer/index.ts:1503:19)
    at unexpected (/home/runner/workspace/node_modules/@babel/parser/src/tokenizer/index.ts:1543:16)
    at expect (/home/runner/workspace/node_modules/@babel/parser/src/parser/util.ts:157:12)
    at parseParenAndDistinguishExpression (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:1789:14)
    at parseExprAtom (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:1162:21)
    at parseExprAtom (/home/runner/workspace/node_modules/@babel/parser/src/plugins/jsx/index.ts:583:22)
    at parseExprSubscripts (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:734:23)
    at parseUpdate (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:713:21)
    at parseMaybeUnary (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:675:23)
    at parseMaybeUnary (/home/runner/workspace/node_modules/@babel/parser/src/plugins/typescript/index.ts:3855:20)
    at parseMaybeUnaryOrPrivate (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:409:14)
    at parseExprOps (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:421:23)
    at parseMaybeConditional (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:376:23)
    at parseMaybeAssign (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:301:21)
    at parseMaybeAssign (/home/runner/workspace/node_modules/@babel/parser/src/plugins/typescript/index.ts:3727:22)
    at parseExpressionBase (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:226:23)
    at callback (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:217:39)
    at allowInAnd (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:3187:16)
    at parseExpression (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:217:17)
    at parseReturnStatement (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:1110:28)
    at parseStatementContent (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:538:21)
    at parseStatementContent (/home/runner/workspace/node_modules/@babel/parser/src/plugins/typescript/index.ts:3185:20)
    at parseStatementLike (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:477:17)
    at parseStatementListItem (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:426:17)
    at parseBlockOrModuleBlockBody (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:1439:16)
    at parseBlockBody (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:1412:10)
    at parseBlock (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:1380:10)
    at parseFunctionBody (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:2616:24)
    at parseFunctionBodyAndFinish (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:2585:10)
    at parseFunctionBodyAndFinish (/home/runner/workspace/node_modules/@babel/parser/src/plugins/typescript/index.ts:2646:20)
    at callback (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:1690:12)
    at withSmartMixTopicForbiddingContext (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:3166:14)
    at parseFunction (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:1688:10)
    at parseExportDefaultExpression (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:2565:19)
    at parseExportDefaultExpression (/home/runner/workspace/node_modules/@babel/parser/src/plugins/typescript/index.ts:3117:20)
    at parseExport (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:2447:25)
    at parseExport (/home/runner/workspace/node_modules/@babel/parser/src/plugins/typescript/index.ts:3087:22)
    at parseStatementContent (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:644:25)
    at parseStatementContent (/home/runner/workspace/node_modules/@babel/parser/src/plugins/typescript/index.ts:3185:20)
    at parseStatementLike (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:477:17)
    at parseModuleItem (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:414:17)
    at parseBlockOrModuleBlockBody (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:1438:16)
    at parseBlockBody (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:1412:10)
    at parseProgram (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:229:10)
    at parseTopLevel (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:203:25)
    at parse (/home/runner/workspace/node_modules/@babel/parser/src/parser/index.ts:93:10)
    at parse (/home/runner/workspace/node_modules/@babel/parser/src/plugins/typescript/index.ts:4309:20)
    at parse (/home/runner/workspace/node_modules/@babel/parser/src/index.ts:92:38)
    at TransformPluginContext.handler (/home/runner/workspace/node_modules/@replit/vite-plugin-cartographer/dist/index.mjs:48:23) {
  code: 'BABEL_PARSER_SYNTAX_ERROR',
  reasonCode: 'UnexpectedToken',
  loc: Position { line: 210, column: 0, index: 7697 },
  pos: 7697,
  syntaxPlugin: undefined
}
7:01:17 AM [vite] (client) Pre-transform error: /home/runner/workspace/client/src/pages/client-achievements.tsx: Unexpected token, expected "," (210:0)

  208 |       </main>
  209 |     </div>
> 210 | }
      | ^
  211 |
  212 |
  Plugin: vite:react-babel
  File: /home/runner/workspace/client/src/pages/client-achievements.tsx:210:0
  208 |        </main>
  209 |      </div>
  210 |  }
      |  ^
  211 |  
  212 |  